--- a/txt/templates/txt/update_txt.html
+++ b/txt/templates/txt/update_txt.html
@@ -1,2 +1,1 @@
-{% extends "txt/create_txt.html"%}
-{% block title %}Update{% endblock %}
+{% extends "txt/create_txt.html"%} {% block title %}Update{% endblock %}
