--- a/txt/templates/txt/upload_txt.html
+++ b/txt/templates/txt/upload_txt.html
@@ -1,35 +1,1 @@
-{% extends "txt/base.html"%}
-{% block title %}File{% endblock %}
-{% block content %}
-{% load django_bootstrap5 %}
-
-<center>
-    <div class="card" style="margin:100px ">
-        <div class="card-header">
-            <h3>TXT</h3>
-        </div>
-        <div class="card-body">
-
-            <form enctype=multipart/form-data method="POST">
-                {% csrf_token %}
-
-                {{ form.media }}
-                {% bootstrap_form_errors form %}
-                <div class="form-outline mb-4">
-                    <div class="row">
-                        <div class="col-2">
-
-                            <p class="form-label">{{ form.upload.label }}:</p>
-                        </div>
-                        <div class="col">
-                            {{form.upload}}
-                        </div>
-                    </div>
-                </div>
-
-                <button class="btn btn-primary">Save</button>
-            </form>
-        </div>
-    </div>
-</center>
-{% endblock %}
+{% extends "txt/base.html"%} {% block title %}File{% endblock %} {% block content %} {% load django_bootstrap5 %} <center> <div class="card" style="margin:100px "> <div class="card-header"> <h3>TXT</h3> </div> <div class="card-body"> <form enctype=multipart/form-data method="POST"> {% csrf_token %} {{ form.media }} {% bootstrap_form_errors form %} <div class="form-outline mb-4"> <div class="row"> <div class="col-2"> <p class="form-label">{{ form.upload.label }}:</p> </div> <div class="col"> {{form.upload}} </div> </div> </div> <button class="btn btn-primary">Save</button> </form> </div> </div> </center> {% endblock %}
